# dvcon_ai_library

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTION.md  Dockerfile  PROGRESS.md  README.md  compose.yaml
backend/: README.md  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/api/: router.py  schemas.py
backend/src/backend/api/routes/: __init__.py  admin.py  chat.py  papers.py  search.py  stats.py
backend/src/backend/core/: config.py
backend/src/backend/db/: models.py  session.py
backend/src/backend/services/: chat.py  embeddings.py  extractor.py  graph.py  grobid.py  indexer.py  scraper.py  tei_parser.py
backend/src/backend/tasks/: ingest.py
backend/tests/: test_extractor_grobid.py  test_smoke.py  test_tei_parser.py
backend/tests/__pycache__/: test_smoke.cpython-311-pytest-9.0.2.pyc.95160
data.example/: README.md  horace_chan_manifest.json
data.example/markdown/2012/united states/: hardware-software-co-verification-using-specman-and-systemc-with-tlm-ports.md
example/: README.md
example/data/: horace_chan_manifest.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: chat_panel.tsx  graph_tab.tsx  markdown_tab.tsx  pdf_tab.tsx  search_results_tab.tsx
frontend/src/types/: api.ts
scripts/: start_all.ps1  start_all.sh  start_backend.ps1  start_backend.sh  start_frontend.ps1  start_frontend.sh  start_grobid.ps1  start_grobid.sh  wait_for_http.py
(+20 files in other folders)
